Solved the issue of - Download link needs more contrast

--- a/appinventor/appengine/war/static/css/Ya.css
+++ b/appinventor/appengine/war/static/css/Ya.css
@@ -3397,6 +3397,12 @@ div.dropdiv p {
   height: 130px;
 }
 
+.download-button span {
+  color: #000;
+  text-shadow: none;
+  font-weight: 600;
+}
+
 .download-icon {
   height: 110px;
   width: 110px;
